Refactor Company Member system